extends Control
@onready var button_box_4: TextureRect = $ButtonBox4
@onready var hover_box_4: TextureRect = $HoverBox4
@onready var clicked_box_4: TextureRect = $ClickedBox4
@onready var yes: TextureRect = $Yes
@onready var no: TextureRect = $No
@onready var continue_image: TextureRect = $Continue
@onready var game_over: TextureRect = $GameOver
@onready var button_box_5: TextureRect = $ButtonBox5
@onready var hover_box_5: TextureRect = $HoverBox5
@onready var clicked_box_5: TextureRect = $ClickedBox5
@onready var yes_button: Button = $YesButton
@onready var no_button: Button = $NoButton
